feat: Integrate Svelte support in PreviewPanel and update dependencies. Added @rsbuild/plugin-svelte and svelte to devDependencies, modified rsbuild.config.mjs to include Svelte plugin, and enhanced TypeScript configuration to recognize Svelte types. Introduced a new PreviewPanel component for improved UI rendering and functionality.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "types": ["chrome", "react"],
+    "verbatimModuleSyntax": true,
+    "types": ["chrome", "react", "svelte"],
     "jsx": "react-jsx",
     "baseUrl": "src"
   },
