--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MPL-2.0",
   "devDependencies": {
     "@rsbuild/core": "^1.6.3",
+    "@rsbuild/plugin-svelte": "^1.0.11",
     "@rspack/core": "^1.6.3",
     "@rspack/lite-tapable": "^1.0.0",
     "@swc/helpers": "^0.5.10",
@@ -24,6 +25,7 @@
     "@types/marked": "^6.0.0",
     "@types/react": "18",
     "@types/react-dom": "18",
+    "svelte": "^5.45.8",
     "typescript": "^5.6.3"
   },
   "dependencies": {
